# xm126-bthome-tank

./: AGENTS.md  LICENSE  Makefile  README.md  TODO.md
.github/actions/build-firmware/: action.yml
.github/workflows/: build.yml  release.yml
acconeer/boards/acconeer/xm126/: Kconfig  Kconfig.xm126  board.cmake  board.yml  xm126.dts  xm126.yaml  xm126_defconfig
acconeer/boards/shields/acconeer_xb122/: Kconfig.shield  acconeer_xb122.overlay
acconeer/dts/bindings/: acc,a121.yaml  acc,a121_hal.yaml  vendor-prefixes.txt
acconeer/include/: acc_battery_info.h  acc_mcu_temperature.h  acc_pm.h
acconeer/integration/: acc_hal_integration_zephyr_121.c  acc_integration_zephyr.c
acconeer/source/: acc_battery_info.c  acc_integration_log.c  acc_mcu_temperature.c  acc_pm.c
app/: CMakeLists.txt  TANK_CONFIG_BLE.md  acc_bthome_ble.c  acc_bthome_ble.h  acc_serial_console_commands.c  acc_serial_console_commands.h  acc_tank_config_ble.c  acc_tank_config_ble.h  prj.conf  xm126_bthome_tank.c  xm126_bthome_tank.h
app/boards/: xm126.overlay
app/sysbuild/mcuboot/: prj.conf
